responsive fix badge z-index2

--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -24,6 +24,7 @@ h3{
 
 li{
     margin-top: 2px;
+    z-index: 1;
 }
 
 a{
